<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
>


    <TextView
            android:text="@string/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/id"
            app:layout_constraintTop_toTopOf="@+id/id"/>


    <TextView
            android:layout_width="0dp"
            android:layout_height="24dp" android:id="@+id/id" android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" tools:text="=ID"
            app:layout_constraintStart_toStartOf="@+id/name"/>
    <TextView
            android:text="@string/name"
            android:layout_width="38dp"
            android:layout_height="19dp"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/name" app:layout_constraintTop_toTopOf="@+id/name"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/name" android:autofillHints="" tools:targetApi="o"
            app:layout_constraintTop_toBottomOf="@+id/id" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" tools:text="=Name"/>
    <TextView
            android:text="@string/note"
            android:layout_width="38dp"
            android:layout_height="19dp"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/note"
            app:layout_constraintTop_toTopOf="@+id/note"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/note" android:autofillHints="" tools:targetApi="o"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            tools:text="=Note"/>

    <TextView
            android:text="@string/currency"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@id/currency"
            app:layout_constraintTop_toTopOf="@id/currency"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:id="@+id/currency"
            app:layout_constraintTop_toBottomOf="@+id/note"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/currency"
                  android:layout_marginTop="@dimen/text_margin"
                  android:layout_marginStart="@dimen/text_margin"
                  android:layout_marginEnd="@dimen/text_margin"
                  android:id="@+id/switches"
    >

        <Switch
                android:text="@string/money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/money"

        />
        <Switch
                android:text="@string/closed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/closed"
                android:layout_marginStart="@dimen/text_margin"
        />
        <Switch
                android:text="@string/availableToChild"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/availableToChild"
                android:layout_marginStart="@dimen/text_margin"
        />
    </LinearLayout>

    <include layout="@layout/dialog_buttons"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/switches"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="@dimen/text_margin"
    />

</androidx.constraintlayout.widget.ConstraintLayout>
